force-app/main/default/objects/VITdb_Gazelle__c/VITdb_Gazelle__c.object-meta.xml
<CustomObject>
    <label>Tdb Gazelle</label>
    <nameField>
        <displayFormat>T{0000000000}</displayFormat>
        <label>Ref de Tdb Gazelle</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tdb Gazelle</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>