force-app/main/default/objects/VITdb_Gazelle__c/fields/Ajustement_Marge_indus__c.field-meta.xml
<CustomField>
    <fullName>Ajustement_Marge_indus__c</fullName>
    <inlineHelpText>Sommes des ecarts CAF des lignes de l&apos;année</inlineHelpText>
    <label>Ajustement Marge indus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>