force-app/main/default/objects/VITdb_Gazelle__c/fields/Annulation_complete__c.field-meta.xml
<CustomField>
    <fullName>Annulation_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annulation complète</label>
    <type>Checkbox</type>
</CustomField>