force-app/main/default/objects/VITdb_Gazelle__c/fields/Backlog_actualisee__c.field-meta.xml
<CustomField>
    <fullName>Backlog_actualisee__c</fullName>
    <formula>if( Affaire__r.Date_de_SAV_reelle__c &lt;= Periode_comptable__r.Date_de_fin__c ,
    0,
    Affaire__r.Backlog_Annee_1__c +  PV_Devis__c -  CA_avancement_annee__c
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backlog actualisé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>