force-app/main/default/objects/VITdb_Gazelle__c/fields/CA_avancement_annee__c.field-meta.xml
<CustomField>
    <fullName>CA_avancement_annee__c</fullName>
    <inlineHelpText>somme de tous les CA de l&apos;année (ne pas prendre en compte les CA à l&apos;avancement des années passées)</inlineHelpText>
    <label>CA à l&apos;avancement de l&apos;annee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>