force-app/main/default/objects/VITdb_Gazelle__c/fields/Marge_indus_avancement__c.field-meta.xml
<CustomField>
    <fullName>Marge_indus_avancement__c</fullName>
    <inlineHelpText>pareil quel  CA mais sur la marge (somme de tous les CA de l&apos;année (ne pas prendre en compte les CA à l&apos;avancement des années passées)</inlineHelpText>
    <label>Marge indus à l&apos;avancement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>