force-app/main/default/objects/VITdb_Gazelle__c/fields/Marge_indus_devis__c.field-meta.xml
<CustomField>
    <fullName>Marge_indus_devis__c</fullName>
    <inlineHelpText>Somme des marges de tous les devis de l&apos;année</inlineHelpText>
    <label>Marge indus devis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>