force-app/main/default/objects/VITdb_Gazelle__c/fields/Periode_comptable__c.field-meta.xml
<CustomField>
    <fullName>Periode_comptable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Période comptable</label>
    <referenceTo>VIPeriode__c</referenceTo>
    <relationshipLabel>Tdb Gazelle</relationshipLabel>
    <relationshipName>Tdb_Gazelle</relationshipName>
    <type>Lookup</type>
</CustomField>