force-app/main/default/objects/VITdb_Gazelle__c/fields/Periode_comptable_statut__c.field-meta.xml
<CustomField>
    <fullName>Periode_comptable_statut__c</fullName>
    <formula>text( Periode_comptable__r.Statut__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Période comptable statut</label>
    <type>Text</type>
</CustomField>