force-app/main/default/objects/VITdb_Gazelle__c/fields/Pourcentage_MI_avancement__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_MI_avancement__c</fullName>
    <formula>if(CA_avancement_annee__c!=0, 100 *(Marge_indus_avancement__c/ CA_avancement_annee__c ) , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pourcentage MI à l&apos;avancement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>