force-app/main/default/objects/VITdb_Gazelle__c/fields/Pourcentage_MI_Backlog_actualisee__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_MI_Backlog_actualisee__c</fullName>
    <formula>if(Backlog_actualisee__c!=0, (Marge_indus_Backlog_actualisee__c / Backlog_actualisee__c) * 100,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pourcentage MI Backlog actualisée</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>