force-app/main/default/objects/VITdb_Gazelle__c/fields/Pourcentage_MI_devis__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_MI_devis__c</fullName>
    <formula>if(PV_Devis__c!=0, 100 * (Marge_indus_devis__c /  PV_Devis__c), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pourcentage MI devis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>