force-app/main/default/objects/VITdb_Gazelle__c/fields/PV_Devis__c.field-meta.xml
<CustomField>
    <fullName>PV_Devis__c</fullName>
    <inlineHelpText>Somme de tous les avenants de l&apos;année en cours</inlineHelpText>
    <label>PV Devis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>